--- a/index.html
+++ b/index.html
@@ -7,22 +7,26 @@
     <link rel="stylesheet" href="styles.css">
     <!-- Add Firebase SDK -->
     <script type="module">
-        // Your Firebase configuration and initialization code here
-        import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js';
+        import { initializeApp, getApps } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js';
         import { getFirestore, collection, getDocs, addDoc, updateDoc, doc } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js';
 
         const firebaseConfig = {
-      apiKey: "AIzaSyAUM136UaVHKBbcvCV6LOEfG-QkSAkjtsA",
-      authDomain: "aos-tracker-web.firebaseapp.com",
-      projectId: "aos-tracker-web",
-      storageBucket: "aos-tracker-web.firebasestorage.app",
-      messagingSenderId: "75216173221",
-      appId: "1:75216173221:web:9285e0cc5d87af0daf754c",
-      measurementId: "G-MBN4PE645R"
-    };
-        
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
+          apiKey: "AIzaSyAUM136UaVHKBbcvCV6LOEfG-QkSAkjtsA",
+          authDomain: "aos-tracker-web.firebaseapp.com",
+          projectId: "aos-tracker-web",
+          storageBucket: "aos-tracker-web.firebasestorage.app",
+          messagingSenderId: "75216173221",
+          appId: "1:75216173221:web:9285e0cc5d87af0daf754c",
+          measurementId: "G-MBN4PE645R"
+        };
+        // Initialize Firebase if not already initialized
+        let app;
+        if (!getApps().length) {
+            app = initializeApp(firebaseConfig);
+        } else {
+            app = getApps()[0];
+        }
+
         const db = getFirestore(app);
 
         // Example Firestore operations
