--- a/index.html
+++ b/index.html
@@ -6,38 +6,7 @@
     <title>Cheeseburger Counter</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Add Firebase SDK -->
-    <script type="module">
-        import { initializeApp, getApps } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js';
-        import { getFirestore, collection, getDocs, addDoc, updateDoc, doc } from 'https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js';
-
-        const firebaseConfig = {
-          apiKey: "AIzaSyAUM136UaVHKBbcvCV6LOEfG-QkSAkjtsA",
-          authDomain: "aos-tracker-web.firebaseapp.com",
-          projectId: "aos-tracker-web",
-          storageBucket: "aos-tracker-web.firebasestorage.app",
-          messagingSenderId: "75216173221",
-          appId: "1:75216173221:web:9285e0cc5d87af0daf754c",
-          measurementId: "G-MBN4PE645R"
-        };
-        // Initialize Firebase if not already initialized
-        let app;
-        if (!getApps().length) {
-            app = initializeApp(firebaseConfig);
-        } else {
-            app = getApps()[0];
-        }
-
-        const db = getFirestore(app);
-
-        // Example Firestore operations
-        async function fetchStaff() {
-            const snapshot = await getDocs(collection(db, 'staff'));
-            const staffList = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-            console.log(staffList);
-        }
-
-        fetchStaff();
-    </script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -65,7 +34,5 @@
             </div>
         </div>
     </div>
-
-    <script src="script.js" type="module"></script>
 </body>
 </html>
