--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" type="image/png" href="/AOS-Tracker-Web/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/AOS-Tracker-Web/favicon.svg" />
+    <link rel="shortcut icon" href="/AOS-Tracker-Web/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/AOS-Tracker-Web/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="AOS Tracker" />
+    <link rel="manifest" href="/AOS-Tracker-Web/site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheeseburger Counter</title>
