--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="/AOS-Tracker-Web/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/AOS-Tracker-Web/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="AOS Tracker" />
-    <link rel="manifest" href="/AOS-Tracker-Web/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheeseburger Counter</title>
