--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/png" href="/AOS-Tracker-Web/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/AOS-Tracker-Web/favicon.svg" />
-    <link rel="shortcut icon" href="/AOS-Tracker-Web/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/AOS-Tracker-Web/apple-touch-icon.png" />
-    <meta name="apple-mobile-web-app-title" content="AOS Tracker" />
+    <meta name="apple-mobile-web-app-title" content="AOS Tracker">
+    <!-- Set the icon for the web clip -->
+    <link rel="apple-touch-icon" href="/AOS-Tracker-Web/apple-touch-icon.png">
+    <!-- Enable full screen mode for the web clip -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <!-- Set the status bar style -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheeseburger Counter</title>
