--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Set the icon for the web clip -->
     <link rel="apple-touch-icon" href="/AOS-Tracker-Web/apple-touch-icon.png">
     <!-- Enable full screen mode for the web clip -->
-    <<meta name="mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <!-- Set the status bar style -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
     <meta charset="UTF-8">
