--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>AOS Tracker</title>
+    <title>Cheeseburger Counter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>AOS Tracker</h1>
+        <h1>Cheeseburger Counter</h1>
 
         <div id="staffMenu" class="menu">
             <input type="text" id="staffName" placeholder="Enter staff name">
@@ -62,6 +62,8 @@
             </select>
             <button onclick="showLeaderboard()">Show Leaderboard</button>
         </div>
+
+        <button id="creditsButton" onclick="showCredits()">Credits</button>
     </div>
 
     <script src="script.js"></script>
