--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
         </div>
 
         <button id="creditsButton" onclick="showCredits()">Credits</button>
+
+        <!-- Credits Modal -->
+        <div id="creditsModal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="closeCredits()">&times;</span>
+                <h2>Credits</h2>
+                <p>Developed by: Calvin Rayer</p>
+                <p>A big thank you to Stephanie Buckholz. You've always supported everyone in the workplace and we couldn't be more grateful for everything you've done for us. We will miss you deeply, and wish you the best for your future endeavours.</p>
+                <p>Love from, Bundaberg City Maccas</p>
+                <p>______________________________________</p>
+                <p>free for use in all Australian Restaurants</p>
+                <button onclick="closeCredits()">Kudos</button>
+            </div>
+        </div>
     </div>
 
     <script src="script.js"></script>
