--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
                 <p>A big thank you to Stephanie Buckholz. You've always supported everyone in the workplace and we couldn't be more grateful for everything you've done for us. We will miss you deeply, and wish you the best for your future endeavours.</p>
                 <p>Love from, Bundaberg City Maccas</p>
                 <p>______________________________________</p>
-                <p>free for use in all Australian Restaurants</p>
-                <button onclick="closeCredits()">Kudos</button>
+                <p>Free for use in all Australian Restaurants</p>
+                <button onclick="closeCredits()">Aww. So sweet. Give me my AOS Tracker back now.</button>
             </div>
         </div>
     </div>
