--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <p>Love from, Bundaberg City Maccas</p>
                 <p>______________________________________</p>
                 <p>Free for use in all Australian Restaurants</p>
-                <button onclick="closeCredits()">Aww. So sweet. Give me my AOS Tracker back now.</button>
+                <button onclick="closeCredits()">Aww. So sweet.</button>
             </div>
         </div>
     </div>
