--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <button id="adminMenuButton" onclick="toggleAdminMenu()">Admin Menu</button>
         
         <button id="leaderboardButton" onclick="showLeaderboardMenu()">Leaderboard</button>
+        
+        <button id="historicalDataButton" onclick="showHistoricalData()">View Historical Data</button>
 
         <div id="adminMenu" style="display: none;">
             <h2>Admin Menu</h2>
