Update index.html - name update

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cheeseburger Counter</h1>
+        <h1>AOS Tracker</h1>
 
         <div id="staffMenu" class="menu">
             <input type="text" id="staffName" placeholder="Enter staff name">
