--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
 <head>
     <meta name="apple-mobile-web-app-title" content="AOS Tracker">
-    <!-- Set the icon for the web clip -->
     <link rel="apple-touch-icon" href="/AOS-Tracker-Web/apple-touch-icon.png">
-    <!-- Enable full screen mode for the web clip -->
     <meta name="mobile-web-app-capable" content="yes">
-    <!-- Set the status bar style -->
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>Cheeseburger Counter</title>
+    <title>AOS Tracker</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
