--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <span class="close" onclick="closeCredits()">&times;</span>
                 <h2>Credits</h2>
                 <p>Developed by: Calvin Rayer</p>
-                <p>A big thank you to Stephanie Buckholz. You've always supported everyone in the workplace and we couldn't be more grateful for everything you've done for us. We will miss you deeply,[...]
+                <p>A big thank you to Stephanie Buckholz. You've always supported everyone in the workplace and we couldn't be more grateful for everything you've done for us. We will miss you deeply.
                 <p>Love from, Bundaberg City Maccas</p>
                 <p>______________________________________</p>
                 <p>Free for use in all Australian Restaurants</p>
